# anomaly-detect

./: CMakeLists.txt
include/: AnomalyDetector.h  vector.h  wavelet.h
src/: AnomalyDetector.cpp  main.cpp  wavelet.cpp
